Fix docs website display on mobile devices, resolve docs build warnings

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -1,3 +1,9 @@
 .bd-page-width {
   max-width: 100rem;  /* default is 88rem */
 }
+
+@media screen and (max-width: 541px) {
+    .title.logo__title {
+        display: none;
+    }
+}
